# jaxdiffmodal

./: .gitignore  .gitmodules  .nojekyll  README.md  coupling.html  coupling.html.md  coupling.md  excitations.html  excitations.html.md  excitations.md  ftm.html  ftm.html.md  ftm.md  index.html  index.html.md  index.md  listings.json  losses.html  losses.html.md  losses.md  num_utils.html  num_utils.html.md  num_utils.md  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  sv.html  sv.html.md  sv.md  utils.html  utils.html.md  utils.md
.github/workflows/: test.yaml
api/: coupling.html  coupling.html.md  excitations.html  excitations.html.md  features.html  features.html.md  ftm.html  ftm.html.md  losses.html  losses.html.md  lpc.html  lpc.html.md  num_utils.html  num_utils.html.md  time_integrators.html  time_integrators.html.md  utils.html  utils.html.md
benchmark/: benchmark_plots.ipynb  generate_parameters.py  generate_parameters.sh  generate_parameters_tm.ipynb  run_cpp.sh  run_matlab.sh  run_python.sh  run_pytorch.sh  sv_matlab.m  sv_python.py  sv_pytorch.py
benchmark/cpp/: CMakeLists.txt  build.sh  main.cpp
examples/: benchmark_einsum.ipynb  index.html  index.md  non-linear.html  non-linear.html.md  optimise_string.ipynb  tension_modulated.ipynb  vkgong.ipynb  vkplate.ipynb  vkplate_opt.ipynb  vkplate_python.ipynb
examples/optimisation/: index.html  index.md  optimise_plate.html  optimise_plate.html.md  optimise_string.html  optimise_string.html.md  optimise_vkplate.html  optimise_vkplate.html.md  optimise_vkplate_h.html  optimise_vkplate_h.html.md
examples/simulations/: index.html  index.md  non-linear.html  non-linear.html.md
jaxdiffmodal/: _modidx.py  coupling.py  excitations.py  feautures.py  ftm.py  losses.py  lpc.py  num_utils.py  time_integrators.py  utils.py
nbs/: _quarto.yml  nbdev.yml  sidebar.yml
nbs/api/: coupling.ipynb  excitations.ipynb  features.ipynb  ftm.ipynb  losses.ipynb  lpc.ipynb  num_utils.ipynb  time_integrators.ipynb  utils.ipynb
nbs/examples/: index.qmd
nbs/examples/optimisation/: index.qmd  optimise_plate.ipynb  optimise_string.ipynb  optimise_vkplate.ipynb  optimise_vkplate_H.ipynb
nbs/examples/simulations/: index.qmd  non-linear.ipynb
site_libs/bootstrap/: bootstrap-399c244c8cb4d4b529cc3363ea9f788a.min.css  bootstrap.min.css
test/: check_bhmat.m  debug_vkgong.m  eigenmac_test.m  generate_H.m  mainRectangularCustom.m
vkplatejax/: _modidx.py  coupling.py  excitations.py  ftm.py  interpolation.py  losses.py  num_utils.py  sv.py  utils.py
